unpackaged/main/default/objects/ACG_Skip_Automations__c/ACG_Skip_Automations__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Hierarchical Custom Setting used to skip/bypass Trigger, Process Builder, Validations etc. for a specific User or Profile.</description>
    <label>Skip Automations</label>
</CustomObject>