unpackaged/main/default/objects/ACG_Skip_Automations__c/fields/ACG_Skip_Process_Builder__c.field-meta.xml
<CustomField>
    <fullName>ACG_Skip_Process_Builder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to skip all custom Process Builders for specified User or Profile.</description>
    <inlineHelpText>Check this to skip all custom Process Builders for specified User or Profile.</inlineHelpText>
    <label>Skip Process Builder</label>
    <type>Checkbox</type>
</CustomField>