unpackaged/main/default/objects/ACG_Skip_Automations__c/fields/ACG_Skip_Trigger__c.field-meta.xml
<CustomField>
    <fullName>ACG_Skip_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to skip all custom Triggers for specified User or Profile.</description>
    <inlineHelpText>Check this to skip all custom Triggers for specified User or Profile.</inlineHelpText>
    <label>Skip Trigger</label>
    <type>Checkbox</type>
</CustomField>